docs: 新增登出API的文件
